more jetbrains ignores

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,9 @@ API
 Training
 Blog
 About
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/.gitignore
+/.idea/actionator.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
